[package]
name = "modem"
version = "0.0.1"
authors = ["Mick Koch <mick@kochm.co>"]

[dependencies]
getopts = "^0.2.14"
num = "^0.1.35"
byteorder = "^0.5.3"

[lib]
name = "modem"
path = "src/modem/lib.rs"

[[bin]]
name = "modulate"
path = "src/bin/modulate.rs"

[[bin]]
name = "demodulate"
path = "src/bin/demodulate.rs"

[[bin]]
name = "fm"
path = "src/bin/fm.rs"
